--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-party",
   "version": "0.0.0",
   "private": true,
-  "main": "lib/index.js",
+  "main": "lib/server.js",
   "scripts": {
     "dev": "nodemon .",
     "prod_start": "NODE_ENV=production pm2 start pm2.json && pm2 log",
